2005-10-13  John W. Eaton  <jwe@octave.org>

	* plot/__plt__.m, plot/__errplot__.m, plot/replot.m:
	If in multiplot mode, clear plot before issuing new plot command.

	* plot/__setup_plot__.m: New function.
	* plot/__plt__.m, plot__errplot__.m: Use it.
	Handle multiplot data and offsets here.

	* plot/__plot_globals__.m: Also keep track of multiplot options.
	Move initialization to __setup_plot__.m.

	* plot/subplot.m: Multiplot globals now in __plot_globals__.m.
	Don't reset gnuplot_command_replot.

	* plot/replot.m: Handle multiplot data and offsets here.
	* plot__axis_label__.m, plot/axis.m, plot/grid.m,
	plot/plot_border.m, plot/plot.m, plot/plot_title.m,
	plot/top_title.m: Call replot, not __gnuplot_replot__.

2005-10-12  John W. Eaton  <jwe@octave.org>

	* plot/figure.m: Handle __current_figure__, not gnuplot details.

2005-10-04  Rafael Laboissiere  <rafael@debian.org>

	* binoinv.m, chi2pdf.m, frnd.m, poissinv.m, tinv.m, trnd.m,
	weibrnd.m: Removed calls and references to deprecated _pdf and
	_inv functions.
	* chi2pdf.m: Fixed typos in the documentation.

2005-09-28  John W. Eaton  <jwe@octave.org>

	* miscellaneous/single.m: New function.

	* statistics/base/unidrnd.m: New function.

2005-09-27  John W. Eaton  <jwe@octave.org>

	* miscellaneous/dir.m: Filename never includes directory part.

2005-09-22  John W. Eaton  <jwe@octave.org>

	* polynomial/residue.m: Use logical indexing instead of find..

2005-09-22  Julius Smith  <jos@ccrma.stanford.edu>

	* polynomial/residue.m: Avoid division by zero for pure imaginary
	and zero poles.

2005-09-22  Bill Denney  <denney@seas.upenn.edu>

	* strings/deblank.m: Handle cell arrays.
	* strings/split.m: New argument, N, to limit number of splits.

2005-09-22  Miroslaw Kwasniak  <mirek@zind.ikem.pwr.wroc.pl>

	* plot/__pltopt1__.m: Handle plot colors "w" and "k" separately.

2005-09-20  "Orestes Mas"  <orestes@tsc.upc.edu>

	* control/base/rlocus.m: Doc fix.

2005-09-20  John W. Eaton  <jwe@octave.org>
