@@ -1,3 +1,8 @@
+2005-10-18  Keith Goodman  <kwgoodman@gmail.com>
+
+	* general/randperm.m: Improve compatibility by allowing input
+	value of zero.
+
 2005-10-13  John W. Eaton  <jwe@octave.org>
 
 	* plot/__plt__.m, plot/__errplot__.m, plot/replot.m:
